<resources>
    <string name="app_name">Оплата ЖКХ</string>
    <string name="button_login">Вход</string>
    <string name="button_registration">Регистрация</string>
    <string name="button_start">Проодолжить</string>
    <string name="input_login">Введите Email</string>
    <string name="input_password">Введите пароль</string>
    <string name="input_lastname">Введите Фамилию</string>
    <string name="input_firstname">Введите Имя</string>
    <string name="input_reminder_name">Введите название Напоминания</string>
    <string name="input_reminder_text">Введите текст Напоминания</string>
    <string name="input_time">Время</string>
    <string name="input_date">Дата</string>
    <string name="input_phone">Введите номер телефона</string>
    <string name="input_patronymic">Введите Отчество</string>
    <string name="input_passport">Введите номер паспорта</string>
    <string name="input_new_tariff">Введите новое значение тариффа :</string>
    <string name="input_counter_color">Выбирите новый цвет счётчика :</string>
    <string name="welcome_text">Добро пожаловать</string>
    <string name="last_name">Фамилия :</string>
    <string name="first_name">Имя :</string>
    <string name="phone">Телефон :</string>
    <string name="passport">Номер паспорта :</string>
    <string name="patronymic">Отчество :</string>
    <string name="action_exit">Выход</string>
    <string name="action_about_app">О приложении</string>
    <string name="action_help">Помощь</string>
    <string name="action_reminder">Напоминания</string>
    <string name="adding_readings">Добавление показаний</string>
    <string name="action_settings">Настройки</string>
    <string name="previous_meter">Предыдущие показания счётчика :</string>
    <string name="current_meter">Текущие показания счётчика :</string>
    <string name="tariff">Тариф (руб.) :</string>
    <string name="result">Итог (руб.) :</string>
    <string name="button_calculate">Посчитать</string>
    <string name="button_add">Добавить показания</string>
    <string name="button_cancel">Отменить</string>
</resources>
