<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegistrationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textLastname"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_lastname"
            android:shadowColor="@color/colorHint"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/textFirstname"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_firstname"
            android:shadowColor="@color/colorHint"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/textPatronymic"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_patronymic"
            android:shadowColor="@color/colorHint"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/textPhone"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_phone"
            android:shadowColor="@color/colorHint"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/loginText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_login"
            android:inputType="textPersonName"
            android:shadowColor="@color/colorHint"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/passText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:shadowColor="@color/colorHint"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/style_button_iniciar"
            android:text="@string/button_registration"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>