<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reminderName"
            android:hint="@string/input_reminder_name"
            android:inputType="text"
            android:text=""
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/colorHeadline"
            app:met_primaryColor="@color/colorSecondary"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reminderText"
            android:hint="@string/input_reminder_text"
            android:inputType="text"
            android:text=""
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/colorHeadline"
            app:met_primaryColor="@color/colorSecondary"
            app:met_singleLineEllipsis="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/reminderTime"
                android:hint="@string/input_time"
                android:inputType="time"
                android:text=""
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/colorHeadline"
                app:met_primaryColor="@color/colorSecondary"
                app:met_singleLineEllipsis="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/reminderDate"
                android:hint="@string/input_date"
                android:inputType="date"
                android:text=""
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/colorHeadline"
                app:met_primaryColor="@color/colorSecondary"
                app:met_singleLineEllipsis="true"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>